k8s/base/signaling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signaling
  namespace: secure-platform
  labels:
    app.kubernetes.io/name: signaling
    app.kubernetes.io/part-of: secure-platform
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: signaling
  template:
    metadata:
      labels:
        app.kubernetes.io/name: signaling
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: signaling
          image: ghcr.io/melvinjosec/secure-remote-access-signaling:latest
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8443
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8443
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8443
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
